# cmake-learning

./: README.md  environment_var.md  error.md
1/: CMakeLists.txt  build.sh  main.cc  math.cc  math.h
2/: CMakeLists.txt  build.sh
2/math/: CMakeLists.txt  math.cc  myMath.h
3/: CMakeLists.txt  build.sh  main.cc
3/cmake/: FindGlog.cmake
3/mymath/: mymath.cc
3/test/: test.cc
